[gd_scene load_steps=20 format=3 uid="uid://bk8f33t000c6y"]

[ext_resource type="Texture2D" uid="uid://755f0l2xp2fd" path="res://tileable-grass_clover_tt7010116-sample_1.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://cporsb3x0kcbh" path="res://character_body_2d.gd" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://cpx5ppiwwc6lb" path="res://icon.svg" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://cf53qfm1efyio" path="res://area_2d.tscn" id="4_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dejvbhmn1xif4" path="res://pixel_door.png" id="6_7mycd"]
[ext_resource type="Script" uid="uid://c87uqclomdwjv" path="res://door.gd" id="6_272bh"]
[ext_resource type="PackedScene" uid="uid://c2efg3l7it3hb" path="res://enemy.tscn" id="7_272bh"]
[ext_resource type="Script" uid="uid://bqoccdbk63cf6" path="res://enemy.gd" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://d2ejs6ur4m8ql" path="res://button.tscn" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://drulghqyrqivo" path="res://win.tscn" id="10_efxa6"]
[ext_resource type="PackedScene" uid="uid://ddtf6gkk31sfk" path="res://lost.tscn" id="10_ycdy4"]
[ext_resource type="Script" uid="uid://cnwibr6i1yrei" path="res://win.gd" id="11_dg77c"]
[ext_resource type="Script" uid="uid://btda04lyiqq17" path="res://lost.gd" id="11_w48qg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1bvp3"]
texture = ExtResource("1_0xm2m")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_lquwl"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_1bvp3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(127, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vw27"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]
size = Vector2(152, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycdy4"]
size = Vector2(149.33333, 138.66667)

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lquwl")
format = 2
layer_0/tile_data = PackedInt32Array(196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 1, 131098, 0, 1, 196602, 0, 0, 131066, 0, 0, 65530, 0, 0, -6, 0, 0, -65542, 0, 0, -131078, 0, 0, -196614, 0, 0, 65562, 0, 0, 26, 0, 0, -65510, 0, 0, -131046, 0, 0, -196582, 0, 0, -262118, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, 262138, 0, 1, 327674, 0, 1, 393210, 0, 1, 393211, 0, 1, 393212, 0, 1, 393213, 0, 1, 393214, 0, 1, 393215, 0, 1, 327680, 0, 1, 327681, 0, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 1, 327691, 0, 1, 327692, 0, 1, 327693, 0, 1, 327694, 0, 1, 327695, 0, 1, 327696, 0, 1, 327697, 0, 1, 327698, 0, 1, 327699, 0, 1, 327700, 0, 1, 262159, 0, 1, 196623, 0, 1, 196622, 0, 1, 196621, 0, 1, 196620, 0, 1, 196619, 0, 1, 262155, 0, 1, 262156, 0, 1, 262157, 0, 1, 262158, 0, 1, 262154, 0, 1, 262153, 0, 1, 262152, 0, 1, 262151, 0, 1, 262150, 0, 1, 262149, 0, 1, 262148, 0, 1, 262147, 0, 1, 196618, 0, 1, 196617, 0, 1, 196616, 0, 1, 196615, 0, 1, 196614, 0, 1, 196613, 0, 1, 196612, 0, 1, 196611, 0, 1, 196610, 0, 1, 196609, 0, 1, 196608, 0, 1, 262143, 0, 1, 262142, 0, 1, 262141, 0, 1, 262140, 0, 1, 262139, 0, 1, 327675, 0, 1, 327676, 0, 1, 327677, 0, 1, 327678, 0, 1, 327679, 0, 1, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, 196624, 0, 1, 196625, 0, 1, 196626, 0, 1, 196627, 0, 1, 196628, 0, 1, 196629, 0, 0, 196630, 0, 1, 196631, 0, 1, 196632, 0, 0, 196634, 0, 1, 262170, 0, 1, 327706, 0, 1, 327705, 0, 1, 327704, 0, 1, 327703, 0, 1, 327702, 0, 1, 327701, 0, 1, 262164, 0, 1, 262163, 0, 1, 262162, 0, 1, 262161, 0, 1, 262160, 0, 1, 262165, 0, 1, 262166, 0, 1, 262167, 0, 1, 262168, 0, 1, 262169, 0, 1, 196633, 0, 1, -196615, 0, 1, -196616, 0, 1, -196617, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -11, 0, 1, 65525, 0, 1, 131061, 0, 1, 196597, 0, 1, 196598, 0, 1, 262134, 0, 1, 327670, 0, 1, 393206, 0, 1, 327671, 0, 1, 327672, 0, 1, 327673, 0, 1, 262137, 0, 1, 196601, 0, 1, 131065, 0, 1, 65529, 0, 1, -7, 0, 1, 131064, 0, 1, 196600, 0, 1, 262136, 0, 1, 65528, 0, 1, -8, 0, 1, -9, 0, 1, -65545, 0, 1, -131081, 0, 1, -196619, 0, 1, -196620, 0, 1, -131084, 0, 1, -65548, 0, 1, -12, 0, 1, 65524, 0, 1, 131060, 0, 1, 196596, 0, 1, 262132, 0, 1, 327668, 0, 1, 327669, 0, 1, 262133, 0, 1, -65547, 0, 1, -131083, 0, 1, -10, 0, 1, 65526, 0, 1, 131062, 0, 1, 196599, 0, 1, 131063, 0, 1, 65527, 0, 1, 262135, 0, 1, -131080, 0, 1, -65544, 0, 1, -131079, 0, 1, -65543, 0, 1, -262117, 0, 0, -262116, 0, 0, -262115, 0, 1, -262114, 0, 1, -262113, 0, 1, -196577, 0, 1, -131041, 0, 1, -65505, 0, 1, 32, 0, 1, 65568, 0, 1, 131104, 0, 1, 196640, 0, 1, 262176, 0, 1, 327712, 0, 1, 393248, 0, 1, -65504, 0, 1, -131040, 0, 1, -196576, 0, 1, -262112, 0, 1, 31, 0, 1, 65567, 0, 1, 131103, 0, 1, 196639, 0, 1, 262175, 0, 1, 262174, 0, 1, 262173, 0, 1, 262172, 0, 1, 262171, 0, 1, 196635, 0, 1, 131099, 0, 1, 65563, 0, 1, 27, 0, 1, -65509, 0, 1, -131045, 0, 1, -196581, 0, 1, -196580, 0, 1, -131044, 0, 1, -65508, 0, 1, 28, 0, 1, 65564, 0, 1, 131100, 0, 1, 196636, 0, 1, -131043, 0, 1, -196579, 0, 1, -65507, 0, 1, 29, 0, 1, 65565, 0, 1, 131101, 0, 1, 196637, 0, 1, -131042, 0, 1, -196578, 0, 1, -65506, 0, 1, 30, 0, 1, 65566, 0, 1, 131102, 0, 1, 196638, 0, 1, 327707, 0, 1, 327708, 0, 1, 327709, 0, 1, 327710, 0, 1, 327711, 0, 1, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65547, 0, 0, 12, 0, 0, 65548, 0, 0, 65549, 0, 0, -196591, 0, 0, -131055, 0, 0, -65519, 0, 0, 17, 0, 0, 65553, 0, 0, 65554, 0, 0, 18, 0, 0, -65518, 0, 0, -131054, 0, 0, -196590, 0, 0, -196589, 0, 0, -131053, 0, 0, -131052, 0, 0, -65516, 0, 0, 20, 0, 0, 65556, 0, 0, 65555, 0, 0, 19, 0, 0, -65517, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -131050, 0, 0, -65514, 0, 0, 22, 0, 0, 65558, 0, 0, -65515, 0, 0, -131051, 0, 0, 21, 0, 0, 65557, 0, 0, -65513, 0, 0, -131049, 0, 0, -196585, 0, 0, -196584, 0, 0, -131048, 0, 0, -131047, 0, 0, -196583, 0, 0, 23, 0, 0, 65559, 0, 0, 24, 0, 0, 25, 0, 0, 65561, 0, 0, -65511, 0, 0, -65512, 0, 0, 65560, 0, 0)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(0, 224)
script = ExtResource("2_1bvp3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_7mycd")

[node name="Icon" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_h2yge")

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true

[node name="hitbox" type="Area2D" parent="Player"]

[node name="hitbox_area" type="CollisionShape2D" parent="Player/hitbox"]
shape = SubResource("RectangleShape2D_5vw27")

[node name="Key" type="Node2D" parent="."]

[node name="Area2D" parent="Key" instance=ExtResource("4_1bvp3")]
position = Vector2(1296, -200)

[node name="Area2D" type="Area2D" parent="."]

[node name="Door" type="Node2D" parent="Area2D"]
script = ExtResource("6_272bh")

[node name="opened" type="Sprite2D" parent="Area2D/Door"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(2056, 56)
texture = ExtResource("6_7mycd")

[node name="closed" type="Sprite2D" parent="Area2D/Door"]
position = Vector2(2056, 56)
texture = ExtResource("6_7mycd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2100, 56)
shape = SubResource("RectangleShape2D_kek77")

[node name="Enemy" parent="." instance=ExtResource("7_272bh")]
position = Vector2(-512, 208)
script = ExtResource("8_5vw27")

[node name="enemy_hitbox" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/enemy_hitbox"]
position = Vector2(0, -5.3333435)
shape = SubResource("RectangleShape2D_ycdy4")

[node name="Button" parent="." instance=ExtResource("9_kek77")]

[node name="lost" parent="." instance=ExtResource("10_ycdy4")]
visible = false
script = ExtResource("11_w48qg")

[node name="win" parent="." instance=ExtResource("10_efxa6")]
script = ExtResource("11_dg77c")

[connection signal="lose" from="Player" to="lost" method="_on_player_lose"]
[connection signal="win" from="Player" to="Enemy" method="_on_player_win"]
[connection signal="win" from="Player" to="win" method="_on_player_win"]
[connection signal="body_entered" from="Player/hitbox" to="Player" method="_on_hitbox_body_entered"]
[connection signal="door_opened" from="Key/Area2D" to="Area2D/Door" method="_on_area_2d_door_opened"]
[connection signal="body_entered" from="Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Enemy/enemy_hitbox" to="Player" method="_on_enemy_hitbox_body_entered"]
[connection signal="start_game" from="Button" to="Player" method="_on_button_start_game"]
[connection signal="start_game" from="Button" to="Enemy" method="_on_button_start_game"]
